--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@angular/platform-browser-dynamic": "~17.2.0",
     "@angular/router": "~17.2.0",
     "@nx/angular": "18.1.2",
+    "axios": "^1.6.0",
+    "express": "^4.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -28,14 +30,20 @@
     "@angular/cli": "~17.2.0",
     "@angular/compiler-cli": "~17.2.0",
     "@angular/language-service": "~17.2.0",
+    "@nrwl/express": "^18.1.2",
     "@nx/cypress": "18.1.2",
     "@nx/eslint": "18.1.2",
     "@nx/eslint-plugin": "18.1.2",
+    "@nx/express": "18.1.2",
     "@nx/jest": "18.1.2",
     "@nx/js": "18.1.2",
+    "@nx/node": "18.1.2",
     "@nx/web": "18.1.2",
+    "@nx/webpack": "18.1.2",
     "@nx/workspace": "18.1.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.2.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -49,11 +57,15 @@
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.0.3",
     "nx": "18.1.2",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "url-loader": "^4.1.1",
+    "webpack-cli": "^5.1.4"
   }
 }
