--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@angular/router": "~17.2.0",
     "@nx/angular": "18.1.2",
     "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^8.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -48,6 +51,7 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@types/jest": "^29.4.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
