--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "autoprefixer": "^10.4.19",
     "cypress": "^13.6.6",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -64,8 +65,10 @@
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.0.3",
     "nx": "18.1.2",
+    "postcss": "^8.4.38",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
