--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -2,7 +2,7 @@
   "name": "client",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "app",
+  "prefix": "futbet",
   "sourceRoot": "apps/client/src",
   "tags": [],
   "targets": {
