--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/platform-browser-dynamic": "~17.2.0",
     "@angular/router": "~17.2.0",
     "@nx/angular": "18.1.2",
-    "axios": "^1.6.0",
+    "axios": "1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -29,14 +29,14 @@
     "@angular-devkit/build-angular": "~17.2.0",
     "@angular-devkit/core": "~17.2.0",
     "@angular-devkit/schematics": "~17.2.0",
-    "@angular-eslint/eslint-plugin": "~17.0.0",
-    "@angular-eslint/eslint-plugin-template": "~17.0.0",
-    "@angular-eslint/template-parser": "~17.0.0",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
     "@angular/cli": "~17.2.0",
     "@angular/compiler-cli": "~17.2.0",
     "@angular/language-service": "~17.2.0",
     "@angular/material": "^17.3.1",
-    "@nrwl/express": "^18.1.2",
+    "@nrwl/express": "18.1.2",
     "@nx/cypress": "18.1.2",
     "@nx/eslint": "18.1.2",
     "@nx/eslint-plugin": "18.1.2",
@@ -49,24 +49,24 @@
     "@nx/workspace": "18.1.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.2.0",
-    "@svgr/webpack": "^8.0.1",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@svgr/webpack": "8.1.0",
+    "@swc-node/register": "1.8.0",
+    "@swc/core": "1.3.107",
+    "@swc/helpers": "0.5.7",
     "@types/jest": "^29.4.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "autoprefixer": "^10.4.19",
     "cypress": "^13.6.6",
-    "eslint": "~8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^2.13.4",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~14.0.3",
+    "jest-preset-angular": "14.0.3",
     "nx": "18.1.2",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
