build: add styles from previous repo

--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -17,7 +17,7 @@
         "tsConfig": "apps/client/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
-        "styles": ["apps/client/src/styles.scss"],
+        "styles": ["apps/client/src/styles/styles.scss"],
         "scripts": []
       },
       "configurations": {
