--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
