--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.2.0",
-    "@angular/cdk": "~17.3.1",
-    "@angular/common": "~17.2.0",
-    "@angular/compiler": "~17.2.0",
-    "@angular/core": "~17.2.0",
-    "@angular/forms": "~17.2.0",
+    "@angular/animations": "17.3.9",
+    "@angular/cdk": "17.3.9",
+    "@angular/common": "17.3.9",
+    "@angular/compiler": "17.3.9",
+    "@angular/core": "17.3.9",
+    "@angular/forms": "17.3.9",
     "@angular/material": "~17.3.1",
-    "@angular/platform-browser": "~17.2.0",
-    "@angular/platform-browser-dynamic": "~17.2.0",
-    "@angular/router": "~17.2.0",
-    "@nx/angular": "18.1.2",
+    "@angular/platform-browser": "17.3.9",
+    "@angular/platform-browser-dynamic": "17.3.9",
+    "@angular/router": "17.3.9",
+    "@nx/angular": "19.0.4",
     "axios": "1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -27,29 +27,29 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.2.0",
-    "@angular-devkit/core": "~17.2.0",
-    "@angular-devkit/schematics": "~17.2.0",
-    "@angular-eslint/eslint-plugin": "17.0.1",
-    "@angular-eslint/eslint-plugin-template": "17.0.1",
-    "@angular-eslint/template-parser": "17.0.1",
+    "@angular-devkit/build-angular": "17.3.7",
+    "@angular-devkit/core": "17.3.7",
+    "@angular-devkit/schematics": "17.3.7",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "~17.2.0",
-    "@angular/compiler-cli": "~17.2.0",
-    "@angular/language-service": "~17.2.0",
-    "@angular/material": "^17.3.1",
-    "@nrwl/express": "18.1.2",
-    "@nx/cypress": "18.1.2",
-    "@nx/eslint": "18.1.2",
-    "@nx/eslint-plugin": "18.1.2",
-    "@nx/express": "18.1.2",
-    "@nx/jest": "18.1.2",
-    "@nx/js": "18.1.2",
-    "@nx/node": "18.1.2",
-    "@nx/web": "18.1.2",
-    "@nx/webpack": "18.1.2",
-    "@nx/workspace": "18.1.2",
+    "@angular/compiler-cli": "17.3.9",
+    "@angular/language-service": "17.3.9",
+    "@angular/material": "17.3.9",
+    "@nrwl/express": "19.0.4",
+    "@nx/cypress": "19.0.4",
+    "@nx/eslint": "19.0.4",
+    "@nx/eslint-plugin": "19.0.4",
+    "@nx/express": "19.0.4",
+    "@nx/jest": "19.0.4",
+    "@nx/js": "19.0.4",
+    "@nx/node": "19.0.4",
+    "@nx/web": "19.0.4",
+    "@nx/webpack": "19.0.4",
+    "@nx/workspace": "19.0.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@schematics/angular": "~17.2.0",
+    "@schematics/angular": "17.3.7",
     "@svgr/webpack": "8.1.0",
     "@swc-node/register": "1.8.0",
     "@swc/core": "1.3.107",
@@ -57,26 +57,27 @@
     "@types/jest": "^29.4.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "7.10.0",
+    "@typescript-eslint/parser": "7.10.0",
     "autoprefixer": "^10.4.19",
     "cypress": "^13.6.6",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "14.0.3",
-    "nx": "18.1.2",
+    "nx": "19.0.4",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2",
+    "typescript": "5.4.5",
     "url-loader": "^4.1.1",
     "webpack-cli": "^5.1.4"
   }
 }
+
