--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@angular/platform-browser": "17.3.9",
     "@angular/platform-browser-dynamic": "17.3.9",
     "@angular/router": "17.3.9",
+    "@nrwl/nx-cloud": "^19.0.0",
     "@nx/angular": "19.0.4",
     "axios": "1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "moment": "^2.30.1",
-    "mongoose": "^8.2.3",
+    "mongoose": "^8.4.0",
+    "node-fetch": "^2.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -80,4 +82,3 @@
     "webpack-cli": "^5.1.4"
   }
 }
-
