--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@futbet/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "nx run-many --parallel --target=serve --projects=api,client"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "17.3.9",
