--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx run-many --parallel --target=serve --projects=api,client"
+    "dev": "nx run-many --parallel --target=serve --projects=api,client",
+    "build": "nx build --output public"
   },
   "private": true,
   "dependencies": {
