--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx run-many --parallel --target=serve --projects=api,client",
-    "build": "nx build"
+    "dev": "nx run-many --parallel --target=serve --projects=api,client"
   },
   "private": true,
   "dependencies": {
