--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -16,7 +16,15 @@
         "polyfills": ["zone.js"],
         "tsConfig": "apps/client/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
+        "assets": [
+          "apps/client/src/favicon.ico",
+          "apps/client/src/assets",
+          {
+            "glob": "_redirects",
+            "input": "src",
+            "output": "/"
+          }
+        ],
         "styles": ["apps/client/src/styles/styles.scss"],
         "scripts": []
       },
