--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "helmet": "^7.1.0",
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "node-fetch": "^2.7.0",
