--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.3.9",
-    "@angular/cdk": "17.3.9",
-    "@angular/common": "17.3.9",
-    "@angular/compiler": "17.3.9",
-    "@angular/core": "17.3.9",
-    "@angular/forms": "17.3.9",
+    "@angular/animations": "18.0.1",
+    "@angular/cdk": "18.0.1",
+    "@angular/common": "18.0.1",
+    "@angular/compiler": "18.0.1",
+    "@angular/core": "18.0.1",
+    "@angular/forms": "18.0.1",
     "@angular/material": "~17.3.1",
-    "@angular/platform-browser": "17.3.9",
-    "@angular/platform-browser-dynamic": "17.3.9",
-    "@angular/router": "17.3.9",
-    "@nrwl/nx-cloud": "^19.0.0",
-    "@nx/angular": "19.0.4",
+    "@angular/platform-browser": "18.0.1",
+    "@angular/platform-browser-dynamic": "18.0.1",
+    "@angular/router": "18.0.1",
+    "@nrwl/nx-cloud": "19.0.0",
+    "@nx/angular": "19.1.1",
     "axios": "1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -32,29 +32,29 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.7",
-    "@angular-devkit/core": "17.3.7",
-    "@angular-devkit/schematics": "17.3.7",
+    "@angular-devkit/build-angular": "18.0.2",
+    "@angular-devkit/core": "18.0.2",
+    "@angular-devkit/schematics": "18.0.2",
     "@angular-eslint/eslint-plugin": "17.3.0",
     "@angular-eslint/eslint-plugin-template": "17.3.0",
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "~17.2.0",
-    "@angular/compiler-cli": "17.3.9",
-    "@angular/language-service": "17.3.9",
-    "@angular/material": "17.3.9",
-    "@nrwl/express": "19.0.4",
-    "@nx/cypress": "19.0.4",
-    "@nx/eslint": "19.0.4",
-    "@nx/eslint-plugin": "19.0.4",
-    "@nx/express": "19.0.4",
-    "@nx/jest": "19.0.4",
-    "@nx/js": "19.0.4",
-    "@nx/node": "19.0.4",
-    "@nx/web": "19.0.4",
-    "@nx/webpack": "19.0.4",
-    "@nx/workspace": "19.0.4",
+    "@angular/compiler-cli": "18.0.1",
+    "@angular/language-service": "18.0.1",
+    "@angular/material": "18.0.1",
+    "@nrwl/express": "19.1.1",
+    "@nx/cypress": "19.1.1",
+    "@nx/eslint": "19.1.1",
+    "@nx/eslint-plugin": "19.1.1",
+    "@nx/express": "19.1.1",
+    "@nx/jest": "19.1.1",
+    "@nx/js": "19.1.1",
+    "@nx/node": "19.1.1",
+    "@nx/web": "19.1.1",
+    "@nx/webpack": "19.1.1",
+    "@nx/workspace": "19.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@schematics/angular": "17.3.7",
+    "@schematics/angular": "18.0.2",
     "@svgr/webpack": "8.1.0",
     "@swc-node/register": "1.8.0",
     "@swc/core": "1.3.107",
@@ -65,15 +65,15 @@
     "@typescript-eslint/eslint-plugin": "7.10.0",
     "@typescript-eslint/parser": "7.10.0",
     "autoprefixer": "^10.4.19",
-    "cypress": "^13.6.6",
+    "cypress": "13.9.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "14.0.3",
-    "nx": "19.0.4",
+    "jest-preset-angular": "14.1.0",
+    "nx": "19.1.1",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
