--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@angular/compiler": "18.0.1",
     "@angular/core": "18.0.1",
     "@angular/forms": "18.0.1",
-    "@angular/material": "~17.3.1",
+    "@angular/material": "^18.0.1",
     "@angular/platform-browser": "18.0.1",
     "@angular/platform-browser-dynamic": "18.0.1",
     "@angular/router": "18.0.1",
@@ -35,10 +35,10 @@
     "@angular-devkit/build-angular": "18.0.2",
     "@angular-devkit/core": "18.0.2",
     "@angular-devkit/schematics": "18.0.2",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "~17.2.0",
+    "@angular-eslint/eslint-plugin": "^18.0.1",
+    "@angular-eslint/eslint-plugin-template": "^18.0.1",
+    "@angular-eslint/template-parser": "^18.0.1",
+    "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "18.0.1",
     "@angular/language-service": "18.0.1",
     "@angular/material": "18.0.1",
