--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@app/models": ["apps/client/src/app/models/index.ts"],
+      "@app/constants": ["apps/client/src/app/constants/index.ts"],
+      "@app/components": ["apps/client/src/app/components/index.ts"],
+      "@app/pipes": ["apps/client/src/app/pipes/index.ts"],
+      "@app/services": ["apps/client/src/app/services/index.ts"],
       "@lib/models": ["libs/models/index.ts"],
       "@lib/components": ["libs/components/index.ts"]
     }
