--- a/apps/client/vercel.json
+++ b/apps/client/vercel.json
@@ -3,5 +3,6 @@
   "routes": [
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
-  ]
+  ],
+  "installCommand": "yum install -y hostname && npm ci"
 }
