--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.0.0",
-    "@angular/cdk": "^18.0.0",
+    "@angular/cdk": "~18.0.2",
     "@angular/common": "~18.0.0",
     "@angular/compiler": "~18.0.0",
     "@angular/core": "~18.0.0",
     "@angular/forms": "~18.0.0",
-    "@angular/material": "^18.0.0",
+    "@angular/material": "~18.0.2",
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
@@ -38,6 +38,7 @@
     "@angular/cli": "~18.0.0",
     "@angular/compiler-cli": "~18.0.0",
     "@angular/language-service": "~18.0.0",
+    "@angular/material": "^18.0.2",
     "@nx/devkit": "19.2.3",
     "@nx/eslint": "19.2.3",
     "@nx/eslint-plugin": "19.2.3",
@@ -76,6 +77,5 @@
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "webpack-cli": "^5.1.4"
-  },
-  "nx": {}
+  }
 }
