--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
+    "@angular/service-worker": "~18.0.0",
     "@nx/angular": "19.2.3",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
@@ -39,6 +40,7 @@
     "@angular/compiler-cli": "~18.0.0",
     "@angular/language-service": "~18.0.0",
     "@angular/material": "^18.0.2",
+    "@angular/pwa": "^18.0.3",
     "@nx/devkit": "19.2.3",
     "@nx/eslint": "19.2.3",
     "@nx/eslint-plugin": "19.2.3",
