fix(pwa): missing manifest file (4)

--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -44,7 +44,7 @@
             }
           ],
           "outputHashing": "all",
-          "serviceWorker": "apps/client/ngsw-config.json"
+          "serviceWorker": "apps/client/src/ngsw-config.json"
         },
         "development": {
           "optimization": false,
