fix(pwa): missing manifest file (5)

--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -16,7 +16,11 @@
         "polyfills": [],
         "tsConfig": "apps/client/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
+        "assets": [
+          "apps/client/src/favicon.ico",
+          "apps/client/src/assets",
+          "apps/client/src/manifest.webmanifest"
+        ],
         "styles": [
           "@angular/material/prebuilt-themes/azure-blue.css",
           "apps/client/src/styles/styles.scss"
