--- a/apps/client/src/ngsw-config.json
+++ b/apps/client/src/ngsw-config.json
@@ -10,6 +10,15 @@
       }
     },
     {
+      "name": "assets-logos",
+      "installMode": "prefetch",
+      "resources": {
+        "files": [
+          "/assets/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
+        ]
+      }
+    },
+    {
       "name": "assets",
       "installMode": "lazy",
       "updateMode": "prefetch",
