refactor: project name to reelscore (1/2)

--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -13,7 +13,7 @@
           "warn",
           {
             "type": "attribute",
-            "prefix": "futbet",
+            "prefix": "reelscore",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "warn",
           {
             "type": "element",
-            "prefix": "futbet",
+            "prefix": "reelscore",
             "style": "kebab-case"
           }
         ]
