--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@angular/service-worker": "~18.0.0",
+    "@ngrx/component-store": "~17.0.0",
+    "@ngrx/effects": "~17.0.0",
+    "@ngrx/entity": "~17.0.0",
+    "@ngrx/router-store": "~17.0.0",
+    "@ngrx/store": "~17.0.0",
     "@nx/angular": "19.2.3",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
@@ -42,6 +47,8 @@
     "@angular/language-service": "~18.0.0",
     "@angular/material": "^18.0.2",
     "@angular/pwa": "^18.0.3",
+    "@ngrx/schematics": "~17.0.0",
+    "@ngrx/store-devtools": "~17.0.0",
     "@nx/devkit": "19.2.3",
     "@nx/eslint": "19.2.3",
     "@nx/eslint-plugin": "19.2.3",
@@ -68,6 +75,7 @@
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^0.15.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
