--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@angular/service-worker": "~18.0.0",
-    "@ngrx/component-store": "~17.0.0",
-    "@ngrx/effects": "~17.0.0",
-    "@ngrx/entity": "~17.0.0",
-    "@ngrx/router-store": "~17.0.0",
-    "@ngrx/store": "~17.0.0",
+    "@ngrx/component-store": "^18.0.2",
+    "@ngrx/effects": "^18.0.2",
+    "@ngrx/entity": "^18.0.2",
+    "@ngrx/operators": "^18.0.2",
+    "@ngrx/router-store": "^18.0.2",
+    "@ngrx/signals": "^18.0.2",
+    "@ngrx/store": "^18.0.2",
     "@nx/angular": "19.2.3",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
