fix: ngrx causing not resolve dependency (2)

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@angular/language-service": "~18.0.0",
     "@angular/material": "^18.0.2",
     "@angular/pwa": "^18.0.3",
-    "@ngrx/schematics": "~17.0.0",
-    "@ngrx/store-devtools": "~17.0.0",
+    "@ngrx/schematics": "^18.0.2",
+    "@ngrx/store-devtools": "^18.0.2",
     "@nx/devkit": "19.2.3",
     "@nx/eslint": "19.2.3",
     "@nx/eslint-plugin": "19.2.3",
