build(eslint): ignore _ as unused var

--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -24,6 +24,13 @@
             "prefix": "reelscore",
             "style": "kebab-case"
           }
+        ],
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          {
+            "varsIgnorePattern": "^_",
+            "argsIgnorePattern": "^_"
+          }
         ]
       }
     },
