feat(cron-job): test job every-5-minutes

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -12,5 +12,12 @@
       "src": "/(.*)",
       "dest": "src/main.ts"
     }
+  ],
+  "crons": [
+    {
+      "name": "every-5-minutes",
+      "schedule": "*/5 * * * *",
+      "command": "src/main.ts"
+    }
   ]
 }
