feat(cron-job): test job every-minute

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -15,8 +15,8 @@
   ],
   "crons": [
     {
-      "name": "every-5-minutes",
-      "schedule": "*/5 * * * *",
+      "name": "every-minute",
+      "schedule": "*/1 * * * *",
       "command": "src/main.ts"
     }
   ]
