feat(cron-job): test job every-minute (2)

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -15,9 +15,9 @@
   ],
   "crons": [
     {
+      "path": "/cron",
       "name": "every-minute",
-      "schedule": "*/1 * * * *",
-      "command": "src/main.ts"
+      "schedule": "*/1 * * * *"
     }
   ]
 }
