feat(cron-job): test job every-minute (3)

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -16,7 +16,7 @@
   "crons": [
     {
       "path": "/cron",
-      "name": "every-minute",
+      "name": "every-minute-1",
       "schedule": "*/1 * * * *"
     }
   ]
