test: trigger deployment (3)

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -12,5 +12,11 @@
       "src": "/(.*)",
       "dest": "src/main.ts"
     }
+  ],
+  "crons": [
+    {
+      "path": "/cron",
+      "schedule": "*/1 * * * *"
+    }
   ]
 }
