test: trigger deployment (5)

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -15,7 +15,7 @@
   ],
   "crons": [
     {
-      "path": "/api/controllers/cron.controller",
+      "path": "/api/src/controllers/cron.controller",
       "schedule": "*/1 * * * *"
     }
   ]
