test: trigger deployment (9)

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -15,7 +15,7 @@
   ],
   "crons": [
     {
-      "path": "/src/controllers/cron.controller.ts",
+      "path": "/apps/api/src/controllers/cron.controller.ts",
       "schedule": "*/1 * * * *"
     }
   ]
