--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -3,7 +3,7 @@
   "crons": [
     {
       "path": "/cron",
-      "schedule": "* * * * *"
+      "schedule": "15 16 * * *"
     }
   ],
   "builds": [
