build(eslint): change directive selector app prefix to 'rs'

--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -13,7 +13,7 @@
           "warn",
           {
             "type": "attribute",
-            "prefix": "reelscore",
+            "prefix": "rs",
             "style": "camelCase"
           }
         ],
