--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "helmet": "^7.1.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.4.1",
     "ngx-skeleton-loader": "^9.0.0",
     "node-fetch": "^3.3.2",
