build: optimized prod config (4)

--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -53,8 +53,7 @@
           "sourceMap": false,
           "namedChunks": false,
           "aot": true,
-          "extractLicenses": true,
-          "buildOptimizer": true
+          "extractLicenses": true
         },
         "development": {
           "optimization": false,
