Update angular to v19.2 * and remove unused zone.js dependency * and run nx migrations

--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -31,7 +31,8 @@
             "varsIgnorePattern": "^_",
             "argsIgnorePattern": "^_"
           }
-        ]
+        ],
+        "@angular-eslint/prefer-standalone": "off"
       }
     },
     {
