--- a/package.json
+++ b/package.json
@@ -7,28 +7,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~18.0.0",
-    "@angular/cdk": "~18.0.2",
-    "@angular/common": "~18.0.0",
-    "@angular/compiler": "~18.0.0",
-    "@angular/core": "~18.0.0",
-    "@angular/forms": "~18.0.0",
-    "@angular/material": "~18.0.2",
-    "@angular/platform-browser": "~18.0.0",
-    "@angular/platform-browser-dynamic": "~18.0.0",
-    "@angular/router": "~18.0.0",
-    "@angular/service-worker": "~18.0.0",
-    "@ngrx/component-store": "^18.0.2",
-    "@ngrx/effects": "^18.0.2",
-    "@ngrx/entity": "^18.0.2",
-    "@ngrx/operators": "^18.0.2",
-    "@ngrx/router-store": "^18.0.2",
-    "@ngrx/signals": "^18.0.2",
-    "@ngrx/store": "^18.0.2",
-    "@nx/angular": "19.2.3",
+    "@angular/animations": "19.2.5",
+    "@angular/cdk": "19.2.8",
+    "@angular/common": "19.2.5",
+    "@angular/compiler": "19.2.5",
+    "@angular/core": "19.2.5",
+    "@angular/forms": "19.2.5",
+    "@angular/platform-browser": "19.2.5",
+    "@angular/platform-browser-dynamic": "19.2.5",
+    "@angular/router": "19.2.5",
+    "@angular/service-worker": "19.2.5",
+    "@ngrx/component-store": "19.1.0",
+    "@ngrx/effects": "19.1.0",
+    "@ngrx/entity": "19.1.0",
+    "@ngrx/operators": "19.1.0",
+    "@ngrx/router-store": "19.1.0",
+    "@ngrx/signals": "19.1.0",
+    "@ngrx/store": "19.1.0",
+    "@nx/angular": "20.7.1",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
+    "express": "4.21.2",
     "helmet": "^7.1.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
@@ -36,61 +35,60 @@
     "ngx-skeleton-loader": "^9.0.0",
     "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.0.0",
-    "@angular-devkit/core": "~18.0.0",
-    "@angular-devkit/schematics": "~18.0.0",
-    "@angular-eslint/eslint-plugin": "^18.0.1",
-    "@angular-eslint/eslint-plugin-template": "^18.0.1",
-    "@angular-eslint/template-parser": "^18.0.1",
-    "@angular/cli": "~18.0.0",
-    "@angular/compiler-cli": "~18.0.0",
-    "@angular/language-service": "~18.0.0",
-    "@angular/material": "^18.0.2",
-    "@angular/pwa": "^18.0.3",
-    "@ngrx/schematics": "^18.0.2",
-    "@ngrx/store-devtools": "^18.0.2",
-    "@nx/devkit": "19.2.3",
-    "@nx/eslint": "19.2.3",
-    "@nx/eslint-plugin": "19.2.3",
-    "@nx/express": "^19.2.3",
-    "@nx/jest": "19.2.3",
-    "@nx/js": "19.2.3",
-    "@nx/node": "19.2.3",
-    "@nx/playwright": "19.2.3",
-    "@nx/web": "19.2.3",
-    "@nx/webpack": "19.2.3",
-    "@nx/workspace": "19.2.3",
+    "@angular-devkit/build-angular": "19.2.6",
+    "@angular-devkit/core": "^19.2.6",
+    "@angular-devkit/schematics": "19.2.6",
+    "@angular-eslint/eslint-plugin": "19.3.0",
+    "@angular-eslint/eslint-plugin-template": "19.3.0",
+    "@angular-eslint/template-parser": "19.3.0",
+    "@angular/cli": "~19.2.0",
+    "@angular/compiler-cli": "19.2.5",
+    "@angular/language-service": "19.2.5",
+    "@angular/material": "^19.2.8",
+    "@angular/pwa": "19.2.6",
+    "@ngrx/schematics": "19.1.0",
+    "@ngrx/store-devtools": "19.1.0",
+    "@nx/devkit": "20.7.1",
+    "@nx/eslint": "20.7.1",
+    "@nx/eslint-plugin": "20.7.1",
+    "@nx/express": "20.7.1",
+    "@nx/jest": "20.7.1",
+    "@nx/js": "20.7.1",
+    "@nx/node": "20.7.1",
+    "@nx/playwright": "20.7.1",
+    "@nx/web": "20.7.1",
+    "@nx/webpack": "20.7.1",
+    "@nx/workspace": "20.7.1",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@schematics/angular": "~18.0.0",
+    "@schematics/angular": "19.2.6",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "29.5.14",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
-    "@typescript-eslint/utils": "^8.0.0-alpha.28",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "7.18.0",
     "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.1",
     "eslint-plugin-playwright": "^0.15.3",
     "jasmine-marbles": "~0.9.1",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~14.1.0",
-    "nx": "19.2.3",
+    "jest-preset-angular": "14.4.2",
+    "nx": "20.7.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2",
+    "typescript": "5.7.3",
     "webpack-cli": "^5.1.4"
   }
 }
