refactor: app selector

--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -21,7 +21,7 @@
           "warn",
           {
             "type": "element",
-            "prefix": "reelscore",
+            "prefix": "rs",
             "style": "kebab-case"
           }
         ],
