refactor: sections in document among other things * changed some component selectors * added div classes in statistics * some styling related adjustments

--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -17,14 +17,14 @@
             "style": "camelCase"
           }
         ],
-        "@angular-eslint/component-selector": [
-          "warn",
-          {
-            "type": "element",
-            "prefix": "rs",
-            "style": "kebab-case"
-          }
-        ],
+        // "@angular-eslint/component-selector": [
+        //   "warn",
+        //   {
+        //     "type": "element",
+        //     "prefix": "rs",
+        //     "style": "kebab-case"
+        //   }
+        // ],
         "@typescript-eslint/no-unused-vars": [
           "warn",
           {
